# rgbd-pointcloud-clusters

./: .gitignore  CMakeLists.txt  README.md  classify_clusters.cpp  main.cpp  run.sh  to_fp_cloud.cpp  to_point_cloud.cpp  viz_cluster_2d.cpp  viz_cluster_3d.cpp  viz_cluster_crop.cpp
dbscan/: dbscan.cpp
label_mappings/: labels_ade20kmodel.txt  labels_adeid_to_sunid.txt  labels_sunrgbd_NYUdata.txt
pytorch_weights/: cifar100_resnet56.pt
src/: cluster.cc  cluster.h  utils.cc  utils.h
